--- a/resources/sass/_var.sass
+++ b/resources/sass/_var.sass
@@ -1,3 +1,9 @@
+
+    
+:root
+    --animate-duration: .3s    
+    
+    
 .bg-image
     background-position: center !important
     background-size: cover !important
