--- a/resources/sass/kovrochist/app.sass
+++ b/resources/sass/kovrochist/app.sass
@@ -76,7 +76,7 @@ nav
     
     img
         max-width: 550px
-        bottom: -120px
+        bottom: -140px
     h1
         font-size: 2rem
         @media(min-width: 992px)
@@ -103,12 +103,21 @@ nav
                 margin-right: 12px
             p
                 margin-bottom: 0
-            
+
+//single slug
+.single-slug
+    .header
+        min-height: 200px
+        margin-bottom: 12px
+        
 // benefits
 .benefit-item
-    min-height: 350px
+    min-height: 250px
     display: flex
     align-items: end
+    position: relative
+    h5
+        font-size: 1rem
 
 // footer
 footer
