--- a/resources/sass/kovrochist/app.sass
+++ b/resources/sass/kovrochist/app.sass
@@ -125,6 +125,22 @@ footer
     padding-bottom: 0
     background: $color-main-light
     border-radius: 20px 20px 0 0 
+    color: $color-white
+    .footer-logo    
+        display: flex
+        align-items: center
+        img
+            margin-right: 6px
+            max-height: 40px
+            @media(min-width: 768px)
+                max-height: 50px
+                margin-right: 12px
+        span
+            font-size: 1rem
+            font-weight: 600
+            color: $color-white
+            @media(min-width: 768px)
+                font-size: 1.3rem
 .copyright
     box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px
     margin-top: 24px
